# git.cpp

./: .gitignore  CMakeCache.txt  Makefile  mnist_makefile  mnist_simple.c  mnist_simple.py
autogenerated/: ggml-metal-embed.s
examples/: CMakeLists.txt  Makefile
examples/gpt-2/: Makefile
examples/gpt-j/: Makefile
examples/llama3/: llama3_model.py  mllama3.py  mllama_image_utils.py  processing_mllama.py  utils.py
examples/magika/: Makefile
examples/mnist/: Makefile
examples/my_mlp/: CMakeLists.txt  Makefile  mlp-backend.cpp  mlp_to_ggml.py  mnist_mlp.py  mnist_model.pth  write_mnist_raw.py
examples/perf-metal/: Makefile
examples/sam/: Makefile
examples/simple/: Makefile
examples/yolo/: Makefile
src/: Makefile
src/ggml-blas/: Makefile
src/ggml-cpu/: Makefile
src/ggml-metal/: Makefile
tests/: Makefile
